tests/bad_reserved_name_field.stderr
tests/bad_reserved_name_field.sl:2:12: error: SL2008: identifier prefix '__sl_' is reserved
tests/bad_reserved_name_field.sl:2:12: hint: SL2008: rename symbol to avoid '__sl_' prefix
