tests/bad_reserved_name_field.sl
struct S { __sl_bad i32 }
